--- a/src/components/UsersAccount/UsersAccount.css
+++ b/src/components/UsersAccount/UsersAccount.css
@@ -359,7 +359,8 @@
     justify-content: center;
     align-items: center;
 }
-.user-character-preview-image-wrap {
+.user-character-preview-image-wrap,
+.user-character-preview-image {
     display: flex;
     flex-direction: column;
     min-width: 240px;
@@ -369,7 +370,8 @@
     margin-right: 4%;
     margin-bottom: 20px;
 }
-.user-character-preview-image-wrap img {
+.user-character-preview-image-wrap img,
+.user-character-preview-image img {
     height: 300px;
     background-repeat: no-repeat;
     background-position: center;
@@ -385,7 +387,6 @@
     flex-direction: column;
     max-width: 60%;
     width: 45%;
-    justify-content: center;
     margin-bottom: 20px;
 }
 .user-character-preview-health-wrap {
@@ -410,6 +411,7 @@
     width: 100%;
     margin-bottom: 10px;
     max-width: 200px;
+    font-size: 18px;
 }
 .user-character-health-wrap {
     display: flex;
@@ -487,7 +489,7 @@
 }
 .user-character-armorclass-title,
 .user-character-hp-title {
-    margin: 10px 0;
+    margin-bottom: 10px;
 }
 .user-character-armor-class-value-block,
 .user-character-max-hits-value-block {
@@ -650,6 +652,7 @@
     width: 100%;
     justify-content: center;
     align-items: center;
+    margin-bottom: 20px;
 }
 .user-character-skills-avalible-wrap {
     margin-right: 10px;
@@ -724,4 +727,118 @@
     position: absolute;
     top: 2px;
     content: '\1F441';
+}
+.user-character-mastery-wrap {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+}
+.user-character-armor-mastery-wrap,
+.user-character-weapon-mastery-wrap,
+.user-character-instrument-mastery-wrap {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-width: 33%;
+    width: 30%;
+}
+.user-character-weapon-mastery-wrap {
+    margin: 0 2% 0 1%;
+}
+.user-character-armor-mastery-item,
+.user-character-weapon-mastery-item,
+.user-character-instrument-mastery-item {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid;
+    padding: 5px;
+    width: 175px;
+    max-width: 100%;
+    margin-bottom: 10px;
+    max-height: 20px;
+    padding: 2px 4px;
+}
+.user-character-weapon-mastery-item {
+    margin: 0 2% 0 2%;
+}
+.mastery-info-icon-wrap,
+.mastery-type-icon-wrap {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-width: 12%;
+    width: 12%;
+    position: relative;
+}
+.mastery-info-icon::before {
+    position: absolute;
+    top: -10px;
+    left: -10px;
+    content: '\1F6C8';
+    max-width: 20px;
+    max-height: 20px;
+    min-width: 20px;
+    min-height: 20px;
+    cursor: pointer;
+}
+.mastery-type-icon-armor::before {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    content: '\1F6C8';
+    max-width: 20px;
+    max-height: 20px;
+    min-width: 20px;
+    min-height: 20px;
+    cursor: pointer;
+    content: '\1F6E1';
+}
+.mastery-type-icon-weapon::before {
+    position: absolute;
+    top: -12px;
+    right: -10px;
+    content: '\2694';
+    max-width: 20px;
+    max-height: 20px;
+    min-width: 20px;
+    min-height: 20px;
+    cursor: pointer;
+    font-size: 22px;
+}
+.mastery-type-icon-instrument::before {
+    content: '\1F527';
+    position: absolute;
+    top: -13px;
+    right: -10px;
+    max-width: 20px;
+    max-height: 20px;
+    min-width: 20px;
+    min-height: 20px;
+    cursor: pointer;
+    font-size: 20px;
+}
+.user-character-mastery-name {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 75%;
+}
+.user-character-description-wrap {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: flex-start;
+}
+.user-character-description-content {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    text-align: left;
+    padding: 10px;
 }
