--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    margin: 0 auto;
+    margin: 20px auto 0 auto;
     padding: 25px;
     background-color: #3A2E32;
     color: #C14B3C;
