--- a/src/components/UsersAccount/UsersAccount.css
+++ b/src/components/UsersAccount/UsersAccount.css
@@ -1387,16 +1387,28 @@
     width: 100%;
     margin-bottom: 20px;
 }
+.preview-character-inventory-item-body-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
 .preview-character-inventory-item-popup-title {
     margin-top: 10%;
     margin-bottom: 20px;
 }
-.preview-character-inventory-img-wrap {
-    margin-bottom: 20px;
+.preview-character-inventory-img-wrap,
+.preview-character-invewntory-item-parametrs {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    justify-content: center;
+    align-items: center;
 }
 .preview-character-inventory-img-wrap img {
-    max-width: 150px;
-    max-height: 150px;
+    max-height: 200px;
 }
 .preview-character-inventory-item-description {
     display: flex;
