--- a/src/components/UsersAccount/UsersAccount.css
+++ b/src/components/UsersAccount/UsersAccount.css
@@ -1507,7 +1507,8 @@
     background-color: gray;
     min-height: 400px;
 }
-.preview-character-add-item-popup-close-btn::before {
+.preview-character-add-item-popup-close-btn::before,
+.preveiw-character-send-item-popup-close-btn::before {
     content: '\274C';
     position: absolute;
     top: 2%;
@@ -1790,4 +1791,224 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+}
+.preveiw-character-send-item-popup-wrap {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    min-width: 600px;
+    min-height: 400px;
+    padding: 20px;
+    position: absolute;
+    z-index: 5;
+    background-color: gray;
+}
+.preveiw-character-send-item-popup-body {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+}
+.preveiw-character-send-item-popup-title {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+.send-item-popup-send-item-popup-address-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-bottom: 20px;
+}
+.preveiw-character-send-item-popup-body {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+.send-item-popup-mycharacters-column-wrap,
+.send-item-popup-othercharacters-column-wrap {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-width: 50%;
+    width: 45%;
+    min-height: 300px;
+    border: 1px solid;
+    padding: 5px;
+    align-items: center;
+}
+.send-item-popup-mycharacters-column-wrap {
+    margin-right: 5%;
+}
+.send-item-popup-mycharacter-item,
+.send-item-popup-othercharacter-item {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-width: 90%;
+    margin-bottom: 10px;
+    width: 100%;
+    border: 1px solid;
+    justify-content: center;
+    cursor: pointer;
+}
+.send-item-othercharacters-search-wrap,
+.send-item-othercharacters-mode-wrap {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 50%;
+    max-width: 50%;
+    margin-bottom: 20px;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+.send-item-othercharacters-search-wrap {
+    justify-content: flex-start;
+}
+.send-item-othercharacters-mode-self,
+.send-item-othercharacters-mode-other {
+    display: flex;
+    flex-direction: row;
+    min-width: 45%;
+}
+.send-item-othercharacters-mode-self button,
+.send-item-othercharacters-mode-other button {
+    cursor: pointer;
+    max-height: 30px;
+    min-height: 30px;
+}
+.send-item-othercharacters-search-wrap input {
+    border: 1px solid;
+    min-width: 93%;
+    text-align: left;
+    min-height: 25px;
+    max-height: 25px;
+}
+.send-item-othercharacters-search-wrap label {
+    margin-bottom: 10px;
+}
+.output-items-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-bottom: 20px;
+}
+.output-items-list-column {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    min-width: 35%;
+    min-height: 50px;
+    margin-right: 5%;
+    justify-content: center;
+}
+.output-item-wrap {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    min-width: 150px;
+    min-height: 25px;
+    border: 1px solid;
+}
+.output-item-name {
+    display: flex;
+    flex-wrap: wrap;
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+}
+.output-item-value {
+    display: flex;
+    flex-wrap: wrap;
+    width: 15%;
+}
+.output-item-control {
+    display: flex;
+    flex-wrap: wrap;
+    width: 30%;
+    justify-content: space-around;
+}
+.output-item-control-plus,
+.output-item-control-min {
+    display: flex;
+    flex-direction: row;
+    max-width: 50%;
+    min-height: 25px;
+    min-height: 25px;
+    margin-right: 10px;
+    position: relative;
+}
+.output-item-control-plus::before {
+    content: '\002B';
+    font-size: 20px;
+    cursor: pointer;
+    position: absolute;
+    top: 5%;
+}
+.output-item-control-min::before {
+    content: '\2212';
+    font-size: 20px;
+    cursor: pointer;
+    position: absolute;
+    top: 5%;
+}
+.output-items-target-character-column {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    min-width: 35%;
+    min-height: 50px;
+    margin-right: 2%;
+}
+.output-item-target-character {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    min-width: 150px;
+    border: 1px solid;
+    min-height: 25px;
+    justify-content: center;
+    align-items: center;
+}
+.output-items-controls-column {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    min-width: 20%;
+    min-height: 50px;
+    align-items: center;
+    justify-content: flex-end;
+}
+.output-items-controls-column button{
+    min-width: 100px;
+    min-height: 25px;
+}
+.output-items-target-character-item {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    position: relative;
+}
+.output-item-target-character-remove::before {
+    content: '\274C';
+    position: absolute;
+    top: 12%;
+    right: 5%;
+    font-size: 18px;
+    cursor: pointer;
+}
+.output-item-btn-send-wrap button {
+    cursor: pointer;
 }
